Fix inconsistent align

--- a/public/styles/components/_atom-create.scss
+++ b/public/styles/components/_atom-create.scss
@@ -7,6 +7,7 @@
     margin-bottom: 10px;
     min-width: 300px;
     height: 100px;
+    vertical-align: top;
 
     &:nth-of-type(odd) {
       margin-right: 10px;
@@ -20,7 +21,7 @@
       width: 100%;
     }
   }
-  
+
   &__note {
     margin-bottom: 10px;
   }
